--- a/index.html
+++ b/index.html
@@ -198,9 +198,11 @@
                     <p>Apart from being a reseacher, I enjoy most of my time being outdoors. I love and practive combat sports like Kick Boxing and Kali (Escrima) and I love also spend time with my Girlfriend.
                         When forced indoors, I love reading and watching tv-series like Rick &amp; Morty, Dr. House and Game of Thrones.
                     </p>
+                    <p>
+                        Incredibly, I've also got a girlfriend! Check out her blog <a href="https://chiaratellsmerano.it">here</a>.
+                    </p>
                 </div>
             </section>
-
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
