--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a reseacher, I enjoy most of my time being outdoors. I love and practive combat sports like Kick Boxing and Kali (Escrima) and I love also spend time with my Girlfriend.
+                    <p>Apart from being a reseacher, I enjoy most of my time being outdoors. I love and practice combat sports like Kick Boxing and Kali (Escrima) and I love also spend time with my Girlfriend.
                         When forced indoors, I love reading and watching tv-series like Rick &amp; Morty, Dr. House and Game of Thrones.
                     </p>
                     <p>
