--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </ul>
             </div>
         </nav>
+
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
@@ -43,8 +44,9 @@
                     <h1 class="mb-0">Luca <span class="text-primary">Di Liello</span></h1>
                     <div class="subheading mb-5">Via Sommarive 9 · Trento, TN 38123 · <a href="mailto:name@email.com">luca.diliello@unitn.it</a></div>
                     <p class="lead mb-5">I'm a PhD student in Information and Communication Technology at the University of Trento, Italy, where I also received my MS in Computer Science. 
-                        I work mainly on cross-lingual neural networks for natural language processing, but I am also interested in constrained generative models.</p>
-                      <div class="social-icons">
+                        I work mainly on large language models for natural language processing and information retrieval, but I am also interested in computer vision and constrained generative models.</p>
+                    <p><b>Interests:</b> Natural Language Processing, Pre-Training of Neural Language Models, Answer Sentence Selection, Question Answering, Generative models, Multilingual models.</p>
+                    <div class="social-icons">
                         <a href="https://www.linkedin.com/in/luca-di-liello-4b624092/" style="padding: 25px" >
                             <i class="fab fa-linkedin-in fa-4x" aria-hidden="true"></i>
                         </a>
@@ -56,10 +58,30 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Applied Scientist Intern II</h3>
+                            <div class="subheading mb-3">Amazon Alexa</div>
+                            <p>Continuing the work of the previous internship about the design, development and test of large language models for Answer Sentence Selection.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2022 - July 2022</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Applied Scientist Intern I</h3>
+                            <div class="subheading mb-3">Amazon Alexa</div>
+                            <p>Improve the state-of-the-art for Answer Sentence Selection models.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - October 2021</span></div>
+                    </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Professor of Informatics</h3>
@@ -68,10 +90,11 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2018 - January 2019</span></div>
                     </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Big Data Analysis</h3>
-                            <div class="subheading mb-3">SpazioDati SRL - Internship</div>
+                            <h3 class="mb-0">Big Data Analyst Intern</h3>
+                            <div class="subheading mb-3">SpazioDati SRL</div>
                             <p>Analyze million of tweets, geolocated in Italy, to find interesting relations with companies and their empolyees.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2017 - June 2017</span></div>
@@ -79,6 +102,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -87,7 +111,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Trento</h3>
-                            <div class="subheading mb-3">PhD in INFORMATION AND COMMUNICATION Technology</div>
+                            <div class="subheading mb-3">PhD Candidate in Information and Communication Technologies</div>
                             <div><b>Topics</b> Natural Language Processing and Information Retrieval</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2019 - Now</span></div>
@@ -120,6 +144,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
@@ -152,7 +177,6 @@
                         </li>
                     </ul>
 
-                    <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">
@@ -177,7 +201,6 @@
                             <span class="iconify" data-icon="bi:lightning" data-inline="true"></span></span>
                         </li>
                     </ul>
-                    
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
@@ -185,12 +208,6 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Generative Models for Computer Vision
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Responsive, Flexible &amp; Reactive Web Development
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Agile Development & Scrum
                         </li>
                     </ul>
                 </div>
@@ -202,23 +219,70 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <ul>
+
                         <li> 
-                            <h4>Efficient Generation of Structured Objects with Constrained Adversarial Networks - 2020</h2>
+                            <h4>TorchMetrics - Measuring Reproducibility in PyTorch - 2022</h2>
                             <p>
-                                Generative Adversarial Networks (GANs) struggle to generate structured objects like molecules and game maps. The issue is that structured objects must satisfy hard requirements (e.g., molecules must be chemically valid) that are difficult to acquire from examples alone. As a remedy, we propose Constrained Adversarial Networks (CANs), an extension of GANs in which the constraints are embedded into the model during training. This is achieved by penalizing the generator proportionally to the mass it allocates to invalid structures. In contrast to other generative models, CANs support efficient inference of valid structures (with high probability) and allows to turn on and off the learned constraints at inference time. CANs handle arbitrary logical constraints and leverage knowledge compilation techniques to efficiently evaluate the disagreement between the model and the constraints. Our setup is further extended to hybrid logical-neural constraints for capturing very complex constraints, like graph reachability. An extensive empirical analysis shows that CANs efficiently generate valid structures that are both high-quality and novel.
+                                A main problem with reproducing machine learning publications is the variance of metric implementations across papers. A lack of standardization leads to different behavior in mechanisms such as checkpointing, learning rate schedulers or early stopping, that will influence the reported results. For example, a complex metric such as Fréchet inception distance (FID) for synthetic image quality evaluation (Heusel et al., 2017) will differ based on the specific interpolation method used.
                             </p>
-                            <a href="https://papers.nips.cc/paper/2020/file/a87c11b9100c608b7f8e98cfa316ff7b-Paper.pdf">https://papers.nips.cc/paper/2020/file/a87c11b9100c608b7f8e98cfa316ff7b-Paper.pdf</a>
+                            <a href="https://pdfs.semanticscholar.org/7d3a/54d96020e0772815e8c3aa9107b19f975318.pdf?_ga=2.256242699.1076624713.1657140434-432908749.1657140434">PDF</a>
                             <p></p>
                         </li>
+
+                        <li> 
+                            <h4>Paragraph-based Transformer Pre-training for Multi-Sentence Inference - 2022</h2>
+                            <p>
+                                Inference tasks such as answer sentence selection (AS2) or fact veriﬁcation are typically solved by ﬁne-tuning transformer-based models as individual sentence-pair classiﬁers. Recent studies show that these tasks beneﬁt from modeling dependencies across multiple candidate sentences jointly. In this paper, we ﬁrst show that popular pre-trained transformers perform poorly when used for ﬁne-tuning on multi-candidate inference tasks. We then propose a new pre-training objective that models the paragraph-level semantics across multiple input sentences. Our evaluation on three AS2 and one fact veriﬁcation datasets demonstrates the superiority of our pre-training technique over the traditional ones for transformers used as joint models for multi-candidate inference tasks, as well as when used as cross-encoders for sentence-pair formulations of these tasks.
+                            </p>
+                            <a href="https://arxiv.org/pdf/2205.01228.pdf">PDF</a>
+                            <p></p>
+                        </li>
+
+                        <li> 
+                            <h4>Pre-training Transformer Models with Sentence-Level Objectives for Answer Sentence Selection - 2022</h2>
+                            <p>
+                                An important task for designing QA systems is answer sentence selection (AS2): selecting the sentence containing (or constituting) the answer to a question from a set of retrieved relevant documents. In this paper, we propose three novel sentence-level transformer pre-training objectives that incorporate paragraph-level semantics within and across documents, to improve the performance of transformers for AS2, and mitigate the requirement of large labeled datasets. Our experiments on three public and one industrial AS2 datasets demonstrate the empirical superiority of our pre-trained transformers over baseline models such as RoBERTa and ELECTRA for AS2.
+                            </p>
+                            <a href="https://arxiv.org/pdf/2205.10455.pdf">PDF</a>
+                            <p></p>
+                        </li>
+
+                        <li> 
+                            <h4>Efficient pre-training objectives for Transformers - 2021</h2>
+                            <p>
+                                Transformer-based neural networks have heavily impacted the field of natural language processing, outperforming most previous state-of-the-art models. However, well-known models such as BERT, RoBERTa, and GPT-2 require a huge compute budget to create a high quality contextualised representations. In this paper, we study several efficient pre-training objectives for Transformersbased models. By testing these objectives on different tasks, we determine which of the ELECTRA model’s new features is the most relevant: (i) Transformers pre-training can be improved when the input is not altered with artificial symbols, e.g., masked tokens; and (ii) loss functions computed using the whole output reduce training time. (iii) Additionally, we study efficient models composed of two blocks: a discriminator and a simple generator (inspired by the ELECTRA architecture). Our generator is based on a much simpler statistical approach, which minimally increases the computational cost. Our experiments show that it is possible to efficiently train BERT-like models using a discriminative approach as in ELECTRA but without a complex generator. Finally, we show that ELECTRA largely benefits from a deep hyper-parameter search.
+                            </p>
+                            <a href="https://arxiv.org/pdf/2104.09694.pdf">PDF</a>
+                            <p></p>
+                        </li>
+
+                        <li> 
+                            <h4>Language Transfer for Identifying Diagnostic Paragraphs in Clinical Notes - 2021</h2>
+                            <p>
+                                This paper aims at uncovering the structure of clinical documents, in particular, identifying paragraphs describing “diagnosis” or “procedures”. We present transformer-based architectures for approaching this task in a monolingual setting (English), exploring a weak supervision scheme. We further extend our contribution to a cross-lingual scenario, mitigating the need for expensive manual data annotation and taxonomy engineering for Italian.
+                            </p>
+                            <a href="http://ceur-ws.org/Vol-3033/paper56.pdf">PDF</a>
+                            <p></p>
+                        </li>
+
                         <li>
                             <h4>Cross-Language Transformer Adaptation for Frequently Asked Questions - 2020</h4>
                             <p>
                                 Transfer learning has been proven to be effective, especially when data for the target domain/task is scarce. Sometimes data for a similar task is only available in another language because it may be very specific. In this paper, we explore the use of machine-translated data to transfer models on a related domain. Specifically, we transfer models from the question duplication task (QDT) to similar FAQ selection tasks. The source domain is the well-known English Quora dataset, while the target domain is a collection of small Italian datasets for real case scenarios consisting of FAQ groups retrieved by pivoting on common answers. Our results show great improvements in the zero-shot learning setting and modest improvements using the standard transfer approach for direct in-domain adaptation.
                             </p>
-                            <a href="http://ceur-ws.org/Vol-2769/paper_85.pdf">http://ceur-ws.org/Vol-2769/paper_85.pdf</a>
-                            <br>
+                            <a href="http://ceur-ws.org/Vol-2769/paper_85.pdf">PDF</a>
                             <p></p>
                         </li>
+
+                        <li> 
+                            <h4>Efficient Generation of Structured Objects with Constrained Adversarial Networks - 2020</h2>
+                            <p>
+                                Generative Adversarial Networks (GANs) struggle to generate structured objects like molecules and game maps. The issue is that structured objects must satisfy hard requirements (e.g., molecules must be chemically valid) that are difficult to acquire from examples alone. As a remedy, we propose Constrained Adversarial Networks (CANs), an extension of GANs in which the constraints are embedded into the model during training. This is achieved by penalizing the generator proportionally to the mass it allocates to invalid structures. In contrast to other generative models, CANs support efficient inference of valid structures (with high probability) and allows to turn on and off the learned constraints at inference time. CANs handle arbitrary logical constraints and leverage knowledge compilation techniques to efficiently evaluate the disagreement between the model and the constraints. Our setup is further extended to hybrid logical-neural constraints for capturing very complex constraints, like graph reachability. An extensive empirical analysis shows that CANs efficiently generate valid structures that are both high-quality and novel.
+                            </p>
+                            <a href="https://arxiv.org/pdf/2007.13197.pdf">PDF</a>
+                            <p></p>
+                        </li>
+
                     <ul>
                 </div>
             </section>
@@ -228,15 +292,19 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Software</h2>
                     <ul>
-                        <li> 
-                            <a href="https://github.com/iKernels/transformers-lightning">Transformers lightning</a>
+                        <li>
+                            <a href="https://github.com/iKernels/transformers-lightning">Transformers Lightning</a>
                         </li>
-                        <li> 
-                            <a href="https://github.com/iKernels/create-pretraining-datasets-nlp">Create Large NLP Datasets</a>
+                        <li>
+                            <a href="https://github.com/lucadiliello/mrqa-lightning">MRQA Lightning</a>
                         </li>
-                        <li> 
+                        <li>
                             <a href="https://github.com/lucadiliello/semantic-loss-pytorch">Semantic Loss PyTorch</a>
                         </li>
+                        <li>
+                            <a href="https://github.com/lucadiliello/jsonboard">JsonBoard</a>
+                        </li>
+                        
                     <ul>
                 </div>
             </section>
@@ -245,11 +313,10 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a reseacher, I enjoy most of my time being outdoors. I love and practice combat sports like Kick Boxing and Kali (Escrima) and I love also spend time with my girlfriend.
-                        When forced indoors, I love reading and watching tv-series like Rick &amp; Morty, Dr. House and Game of Thrones.
-                    </p>
                     <p>
-                        Incredibly, I've also got a girlfriend! Check out her blog <a href="https://chiaratellsmerano.ddns.net">here</a>.
+                        Apart from being a reseacher, I enjoy most of my time being outdoors or practicing my favourite sport: Kick Boxing.
+                        During the summer, I try to play Volleyball as much as I can while in the winter I'm lucky to live close to many ski facilities.
+                        When forced indoors, I love reading and watching tv-series like Rick &amp; Morty, Dr. House and Game of Thrones.
                     </p>
                 </div>
             </section>
