profile image update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Luca Di Liello</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="" /></span></a
+                ><span class="d-block d-lg-none">Luca Di Liello</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -46,7 +46,7 @@
                     <div class="subheading mb-5">Via Sommarive 9 · Trento, TN 38123 · <a href="mailto:name@email.com">luca.diliello@unitn.it</a></div>
                     <p class="lead mb-5">I'm a PhD student in Information and Communication Technology at the University of Trento, Italy, where I also received my MS in Computer Science. 
                         I work mainly on large language models for natural language processing and Information Retrieval, but I am also interested in computer vision and constrained generative models.</p>
-                    <p><b>Interests:</b> Natural Language Processing, Pre-Training of Neural Language Models, Answer Sentence Selection, Question Answering, Generative models.</p>
+                    <p><b>Interests:</b> Natural Language Processing, Pre-Training of Neural Language Models, Question Answering (Answer Sentence Selection) and Generative models.</p>
                     <div class="social-icons">
                         <a href="https://www.semanticscholar.org/author/Luca-Di-Liello/1576607908" style="padding: 25px" >
                             <i class="ai ai-semantic-scholar-square ai-4x" aria-hidden="true"></i>
